--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "gnews-node-api",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "Node module for Gnews Api from gnews.io",
   "main": "index.js",
   "scripts": {
@@ -21,5 +21,9 @@
   "bugs": {
     "url": "https://github.com/elangoram1998/gnews-node-api/issues"
   },
-  "homepage": "https://github.com/elangoram1998/gnews-node-api#readme"
+  "homepage": "https://github.com/elangoram1998/gnews-node-api#readme",
+  "dependencies": {
+    "node-fetch": "^2.6.1",
+    "querystring": "^0.2.0"
+  }
 }
